// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`autoLogOp logs correctly operation failure of async function 1`] = `
Array [
  Array [
    Object {
      "operation": "operationFunction",
    },
  ],
  Array [
    Object {
      "action": "callFunction",
      "operation": "operationFunction",
    },
  ],
]
`;

exports[`autoLogOp logs correctly operation failure of async function 2`] = `
Array [
  Array [
    Object {
      "action": "callFunction",
      "category": "CUSTOM_ERROR",
      "message": "foo",
      "operation": "operationFunction",
      "result": "failure",
      "status": 500,
    },
  ],
  Array [
    Object {
      "category": "CUSTOM_ERROR",
      "message": "foo",
      "operation": "operationFunction",
      "result": "failure",
      "status": 500,
    },
  ],
]
`;

exports[`autoLogOp logs correctly operation failure of async function 3`] = `
Array [
  Array [
    Object {
      "category": "CUSTOM_ERROR",
      "message": "foo",
      "status": 500,
    },
  ],
]
`;

exports[`autoLogOp logs correctly operation failure of non-async function 1`] = `
Array [
  Array [
    Object {
      "operation": "operationFunction",
    },
  ],
  Array [
    Object {
      "action": "callFunction",
      "operation": "operationFunction",
    },
  ],
]
`;

exports[`autoLogOp logs correctly operation failure of non-async function 2`] = `
Array [
  Array [
    Object {
      "action": "callFunction",
      "category": "CUSTOM_ERROR",
      "message": "foo",
      "operation": "operationFunction",
      "result": "failure",
      "status": 500,
    },
  ],
  Array [
    Object {
      "category": "CUSTOM_ERROR",
      "message": "foo",
      "operation": "operationFunction",
      "result": "failure",
      "status": 500,
    },
  ],
]
`;

exports[`autoLogOp logs correctly operation failure of non-async function 3`] = `
Array [
  Array [
    Object {
      "category": "CUSTOM_ERROR",
      "message": "foo",
      "status": 500,
    },
  ],
]
`;

exports[`autoLogOp logs correctly operation success of async function with async sub actions 1`] = `
Array [
  Array [
    Object {
      "operation": "operationFunction",
    },
  ],
  Array [
    Object {
      "action": "callFunction",
      "operation": "operationFunction",
    },
  ],
  Array [
    Object {
      "action": "callFunction",
      "operation": "operationFunction",
      "result": "success",
    },
  ],
  Array [
    Object {
      "operation": "operationFunction",
      "result": "success",
    },
  ],
]
`;

exports[`autoLogOp logs correctly operation success of non-async function with non async sub actions 1`] = `
Array [
  Array [
    Object {
      "operation": "operationFunction",
    },
  ],
  Array [
    Object {
      "action": "callFunction",
      "operation": "operationFunction",
    },
  ],
  Array [
    Object {
      "action": "callFunction",
      "operation": "operationFunction",
      "result": "success",
    },
  ],
  Array [
    Object {
      "operation": "operationFunction",
      "result": "success",
    },
  ],
]
`;

exports[`autoLogOp logs correctly operation success of req.meta from previous middlewares 1`] = `
Object {
  "operation": "operationFunction",
  "transactionId": "xxxx-xxxx",
}
`;

exports[`autoLogOp logs correctly operation success of req.meta from previous middlewares 2`] = `
Array [
  Array [
    Object {
      "operation": "operationFunction",
      "transactionId": "xxxx-xxxx",
    },
  ],
  Array [
    Object {
      "operation": "operationFunction",
      "result": "success",
      "transactionId": "xxxx-xxxx",
    },
  ],
]
`;

exports[`autoLogOps decorate each method correctly 1`] = `
Object {
  "operation": "operationFunctionA",
}
`;

exports[`autoLogOps decorate each method correctly 2`] = `
Array [
  Array [
    Object {
      "operation": "operationFunctionA",
    },
  ],
  Array [
    Object {
      "operation": "operationFunctionA",
      "result": "success",
    },
  ],
]
`;

exports[`autoLogOps decorate each method correctly 3`] = `
Object {
  "operation": "operationFunctionB",
}
`;
